[gd_scene load_steps=2 format=3 uid="uid://cnqnc6nki4poh"]

[ext_resource type="Script" uid="uid://colbvkoe3rr6b" path="res://scripts/spell.gd" id="1_ipndw"]

[node name="Spell" type="Area2D"]
collision_mask = 3
script = ExtResource("1_ipndw")

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 0.01

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Sprite2D" type="Sprite2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_reset_timer_timeout"]
